--- a/templates/contacts/contactfield_list.haml
+++ b/templates/contacts/contactfield_list.haml
@@ -15,52 +15,9 @@
     %temba-modax(id='delete-modal' header='{{_("Delete Field")|escapejs}}' -temba-submitted="handleFieldUpdated")
     %temba-modax(id='usages-modal' header='{{_("Usages")|escapejs}}')
 
-{% block extra-script %}
+-block extra-script
   {{ block.super }}
-  <script>
-    $(document).ready(function(){
-
-      -if is_featured_category
-        -if org_perms.contacts.contactfield_update_priority
-          var sortable = new Sortable(document.getElementById('draggable-tbody'), {
-            // handle: '.drag-handle',  // make this row draggable only by the handle
-            dataIdAttr: 'data-key',
-            direction: 'vertical',
-            animation: 200,
-            ghostClass: "sortable-ghost",  // Class name for the drop placeholder
-            dragClass: "sortable-drag",  // Class name for the dragging item
-            forceFallback: true,
-            onEnd: function (event) {
-
-              var priorityMapping = {};
-              $('#draggable-tbody > tr').each(function(idx, elem) {
-                // rewrite priority of every element based on the current order of elements
-                var new_idx = 1000 - idx;
-                priorityMapping[$(elem).data('key')] = new_idx;
-              });
-
-              var priorityUpdateUrl = '{% url "contacts.contactfield_update_priority" %}';
-
-              $.ajax({
-                type: 'POST',
-                url: priorityUpdateUrl,
-                data: JSON.stringify(priorityMapping),
-                success: function (data, status, jqXHR) {
-                  // do nothing
-                },
-                error: function (jqXHR, status, error) {
-                  console.error(jqXHR, status, error);
-                }
-              });
-            }
-          });
-
-    }); // document.ready
-
-    function handleFieldUpdated(event) {
-      document.location.href = document.location.href;
-    }
-
+  :javascript
     function showUpdateContactFieldModal(key) {
       var modax = document.querySelector('#update-field');
       modax.endpoint = `/contactfield/update/${key}/`;
@@ -78,67 +35,80 @@
       modax.endpoint = `/contactfield/usages/${key}/`;
       modax.open = true;
     }
-  </script>
-  <script type="text/javascript" src="{{ STATIC_URL }}sortablejs/Sortable.min.js"></script>
 
-{% endblock %}
+    function handleFieldUpdated(event) {
+      var store = document.querySelector("temba-store");
+      store.refreshFields();
+      document.querySelector("temba-menu").refresh();
+    }
+
+    function handleFieldClicked(event) {
+      var key = event.detail.key;
+      var action = event.detail.action;
+      if (action == "update") {
+        showUpdateContactFieldModal(key);
+      } else if (action == "usages") {
+        showFieldUsagesModal(key);
+      } else if (action == "delete") {
+        showFieldDeleteModal(key);
+      }
+    }
 
 -block extra-style
   {{block.super}}
-  -block spa-style
-    :css
-      .page-content {
-        align-self: auto;
-        max-width: 100%;
-      }
+  :css
+    .page-content {
+      align-self: auto;
+      max-width: 100%;
+    }
 
-      .drag-handle {
-        cursor: move;
-        display: block;
-      }
+    .drag-handle {
+      cursor: move;
+      display: block;
+    }
 
-      .drag-icon {
-        width: 15px;
-      }
+    .drag-icon {
+      width: 15px;
+    }
 
-      .drag-icon:before {
-        content: '';
-        display: block;
-        width: 15px;
-      }
+    .drag-icon:before {
+      content: '';
+      display: block;
+      width: 15px;
+    }
 
-      .sortable-drag {
-        background-color: #f5f9fa;;
-      }
+    .sortable-drag {
+      background-color: #f5f9fa;;
+    }
 
-      .sortable-ghost {
-        background-color: #f5f9ff;
-      }
+    .sortable-ghost {
+      background-color: #f5f9ff;
+    }
 
-      .draggable-row .icon {
-        display: none;
-      }
+    .draggable-row .icon {
+      display: none;
+    }
 
-      .draggable-row > td {
-        cursor: move;
-      }
+    .draggable-row > td {
+      cursor: move;
+    }
 
-      .draggable-row > td * {
-        user-select: none;
-        -webkit-user-select: none;
-        pointer-events: none;
-      }
+    .draggable-row > td * {
+      user-select: none;
+      -webkit-user-select: none;
+      pointer-events: none;
+    }
 
-      .draggable-row > td:nth-child(2) > div {
-        padding-left: 0rem;
-        cursor: move !important;
-      }
+    .draggable-row > td:nth-child(2) > div {
+      padding-left: 0rem;
+      cursor: move !important;
+    }
 
-      .draggable-row:hover .icon {
-        display: inline-block;
-        color: #cccccc;
-      }
+    .draggable-row:hover .icon {
+      display: inline-block;
+      color: #cccccc;
+    }
 
-      tr:hover .delete-link {
-        visibility: visible !important;
-      }
+    tr:hover .delete-link {
+      visibility: visible !important;
+    }
