--- a/templates/orgs/org_export.haml
+++ b/templates/orgs/org_export.haml
@@ -5,6 +5,21 @@
 -block title
   -trans "Create Export"
 
+-block extra-style
+  {{block.super}}
+  :css
+    .bucket .title {
+      font-size: 1.2em;
+    }
+
+    .card > .bg-gray-100 {
+      
+    }
+
+    .spa-container {
+      background: #fbfbfb;
+    }
+
 -block content
 
   .flex.w-full.mb-4.items-end.flex-wrap.justify-end{style:"min-height:41px"}
