--- a/templates/contacts/contactimport_create.haml
+++ b/templates/contacts/contactimport_create.haml
@@ -1,13 +1,11 @@
 -extends "smartmin/form.html"
 -load smartmin i18n humanize sms
 
--block title
+-block spa-title
   -trans "Import Contacts"
-
 
 -block content
   .flex.mb-4.flex-col(style="min-height:41px")  
-
     -blocktrans trimmed
       You can import contacts from an Excel spreadsheet or comma separated values file.
 
@@ -129,6 +127,53 @@
       padding: 9px;
       cursor: pointer;
       box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 0px 1px, rgba(0, 0, 0, 0.04) 0px 3px 20px 0px, rgba(0, 0, 0, 0.02) 0px 1px 2px 0px;
+    }
+
+    table.list tr th {
+      text-transform: none;
+      font-size: 0.85rem;
+    }
+
+    #file-upload {
+      position: relative;
+    }
+
+    #file_errors {
+      font-size: 20px;
+    }
+
+    #real-button {
+      position: relative;
+      top: 0;
+      left: 0;
+      z-index: 1;
+    }
+
+    #file-field {
+      width: 300px;
+      height: 35px;
+      font-size: 16px;
+      margin-bottom: 0px;
+      border-radius: 5px;
+    }
+
+    #import-file {
+      position: absolute;
+      width: 450px;
+      height: 35px;
+      top: 0;
+      left: 0;
+      text-align: right;
+      -moz-opacity:0 ;
+      filter: alpha(opacity: 0);
+      opacity: 0;
+      z-index: 2;
+    }
+    
+    input {
+      padding: 9px;
+      cursor: pointer;
+      border: 1px solid var(--color-widget-border);
     }
 
     table.list tr th {
