--- a/templates/msgs/broadcast_scheduled_read.haml
+++ b/templates/msgs/broadcast_scheduled_read.haml
@@ -6,36 +6,41 @@
 
 -block content
   -include "formax.haml"
+
   -if object_list
-    .mt-8.mb-4
-      .title
-        -trans "Send History"
-    %table.list(style='{% if not org_perms.msgs.broadcast_send %}margin-top:10px{% endif %}')
-      %tbody
-        -for object in send_history
-          -with translation=object.get_translation
-            %tr
-              %td
-                -with recipient_count=object.get_message_count
-                  -blocktrans trimmed count counter=recipient_count with count_comma=recipient_count|intcomma
-                    {{ count_comma }} recipient
-                  -plural
-                    {{ count_comma }} recipients
-
-              %td.w-full
-                .flex.flex-wrap.flex-end.items-center.justify-end
-                  .flex-grow.inline
-                    .value-text.field_text
-                      {{ translation.text }}
-                -if translation.attachments
-                  .value-attachments{ style:"margin-top: 5px" }
-                    -for attachment in translation.attachments
-                      {% attachment_button attachment %}
+    
+    .shadow-lg.bg-white.rounded-t-lg.px-4.py-3.border-b.bg-gray-100
+      -trans "Send History"
+    
+    .shadow-lg.overflow-y-auto.rounded-b-lg
+      %table.list.bg-white(style='border-radius: 0;{% if not org_perms.msgs.broadcast_send %}margin-top:10px{% endif %}')
+        %tbody
+          -for object in send_history
+            -with translation=object.get_translation
+              %tr
+                %td
+                  -with recipient_count=object.get_message_count
+                    -blocktrans trimmed count counter=recipient_count with count_comma=recipient_count|intcomma
+                      {{ count_comma }} recipient
+                    -plural
+                      {{ count_comma }} recipients
                       
-              %td
-                %nobr
-                  {% short_datetime object.created_on %}
+                %td.w-full
+                  .flex.flex-wrap.flex-end.items-center.justify-end
+                    .flex-grow.inline
+                      .value-text.field_text
+                        {{ translation.text }}
+                  -if translation.attachments
+                    .value-attachments{ style:"margin-top: 5px" }
+                      -for attachment in translation.attachments
+                        {% attachment_button attachment %}
 
-    .mx-8
+                %td
+                  .text-right
+                    %nobr
+                      {% short_datetime object.created_on %}
+
+
+    .mx-4
       -block paginator
         {{ block.super }}
