--- a/templates/orgs/org_manage.haml
+++ b/templates/orgs/org_manage.haml
@@ -4,23 +4,9 @@
 -block title
   -trans "Workspaces"
 
--block pre-table
-  .flex.mb-4.items-center
-    .bg-gray-100.px-4.py-2.rounded-lg.inline-block.mr-4.self-center.-mb-1
-      -for filter_key, filter_name, _, _ in filters
-        -if filter == filter_key
-          .font-normal.inline-block.px-1
-            {{ filter_name }}
-        -else
-          %a.inline-block.px-1(href='?filter={{ filter_key }}')<
-            {{ filter_name }}
-        -if not forloop.last
-          \ |
-
-    .search-box.flex-grow
-      %form#search-form(method='get')
-        %input(type="hidden" name="filter" value='{{ filter }}')
-        %temba-textinput(name='search' value='{{ search }}')
+-block page-header
+  #title-text.hidden
+    {{title}}
 
 -block extra-style
   {{block.super}}
@@ -35,3 +21,10 @@
       white-space: nowrap;
       width: 64px;
     }
+
+-block pre-table
+  .flex.mb-4.items-center
+    .search-box.flex-grow
+      %form#search-form(method='get')
+        %temba-textinput(name='search' value='{{ search }}' placeholder="Search Workspaces")
+        %input.hidden(type="submit" value="Submit")
