--- a/templates/contacts/contact_archived.haml
+++ b/templates/contacts/contact_archived.haml
@@ -1,17 +1,5 @@
--extends "contacts/contact_list_spa.haml"
+-extends "contacts/contact_list.haml"
 -load i18n
-
--block extra-script
-  {{block.super}}
-
-  :javascript
-    var menu = document.querySelector("temba-content-menu");      
-    menu.addEventListener("temba-selection", function(event) {
-      var item = event.detail;
-      if (item.id == "contacts_delete_all") {
-        handleDeleteAllConfirmation_spa();
-      }
-    });
 
 -block title-text
   .title.leading-tight
