--- a/templates/channels/types/instagram/claim.haml
+++ b/templates/channels/types/instagram/claim.haml
@@ -47,27 +47,22 @@
     %p(style="font-size:1rem;")
       -trans "Select the page you want to add as a channel:"
 
--block extra-less
-  -compress css inline
-    {% lessblock %}
-      :plain
-        #fb-channel-options {
-          margin-top: 2rem;
-
-          .fb-page-channel-option {
-            display: inline-block;
-            border: 3px solid #eee;
-            cursor: pointer;
-            text-align: center;
-            font-size: 1rem;
-
-            &:hover {
-              background-color: #eee;
-            }
-          }
-
-        }
-    {% endlessblock %}
+-block extra-style
+  {{ block.super }}
+  :css
+    #fb-channel-options {
+      margin-top: 2rem;
+    }
+    #fb-channel-options .fb-page-channel-option {
+      display: inline-block;
+      border: 3px solid #eee;
+      cursor: pointer;
+      text-align: center;
+      font-size: 1rem;
+    }
+    #fb-channel-options .fb-page-channel-option:hover {
+      background-color: #eee;
+    }
 
 
 -block extra-script
