--- a/templates/contacts/contact_read.haml
+++ b/templates/contacts/contact_read.haml
@@ -45,226 +45,17 @@
       .flex.flex-grow.flex-col.overflow-y-auto(style="border-top-right-radius: var(--curvature);")
         %temba-contact-tickets.m-4(agent="{{user.email}}" contact="{{object.uuid}}" -temba-refreshed="handleTicketsRefreshed" clickable="true" -temba-button-clicked="handleTicketClicked")
 
--block extra-less
-  -compress css
+-block extra-style
+  {{block.super}}
+  :css
+    .urn-link {
+      display: inline-block;
+    }
 
-    :css
-      .urn-link {
-        display: inline-block;
-      }
-
-      .page-content {
-        align-self: auto;
-        max-width: 1024px;
-      }
-
-    {% lessblock %}
-      :plain
-        table.history, table.upcoming {
-          .glyph {
-            font-size: 14px;
-            line-height: 16px;
-            padding-left: 5px;
-
-            &.icon-flow {
-              font-size: 18px;
-              padding-left: 2px;
-            }
-          }
-        }
-
-        .show-all {
-          margin-top:0px;
-          margin-right:10px;
-          color: #d1d1d1;
-
-          &.expanded {
-            .icon-arrow-down {
-              .rotate(2);
-            }
-          }
-          .icon-arrow-down {
-            margin-top:2px;
-            margin-right: 3px;
-          }
-
-          &:hover {
-            color: #c1c1c1;
-            cursor: pointer;
-          }
-        }
-
-        .flow-event-display-selector {
-          a {
-              display: inline-block;
-              &.is-active {
-                cursor: none;
-                color: #999999;
-                cursor: text;
-                text-decoration: none;
-              }
-            }
-          }
-
-        table.list {
-
-          tr.archive-note {
-            border-bottom: none;
-            text-align: center;
-            color: #666;
-            font-size: 90%;
-
-            td {
-              padding: 10px;
-            }
-          }
-
-          tr.since {
-            border-bottom: none;
-            td {
-              text-align:center;
-              border-top: 1px solid @color-bg-grey + #555;
-              padding-top:15px;
-
-              .date {
-                border:0px solid red;
-              }
-
-              .btn {
-                margin-top:15px;
-              }
-            }
-          }
-
-          tr.end-call {
-            background: #ddd;
-            color: #000;
-            td {
-              text-align:center;
-              padding: 5px;
-            }
-          }
-
-          &.upcoming {
-            color: #bbb;
-
-            tr.non-msg {
-              background: inherit;
-            }
-
-            .icon {
-              .glyph.icon-bubble-right, .glyph.icon-flow {
-                color: #bbb;
-              }
-              text-align:center;
-            }
-
-            a {
-              color: #bbb;
-            }
-          }
-
-          tr {
-            &.msg {
-              td.icon {
-                .icon-bubble-right, .icon-bubble-check, .icon-bullhorn, .icon-call-outgoing {
-                  color: @color-status-green;
-                }
-
-                .icon-bubble-user, .icon-call-incoming {
-                  color: @color-primary;
-                }
-
-                .icon-bubble-notification {
-                  color: @color-status-failed;
-                }
-              }
-            }
-
-            &.detail-event {
-              display: table-row;
-            }
-
-            &.non-msg {
-              background: #fafafa;
-
-              &.skipped {
-                background: #fafafa;
-              }
-
-              &.new-session {
-                background: #f0f0f0;
-              }
-
-              .icon {
-                color: rgba(0, 0, 0, 0.20);
-              }
-            }
-          }
-
-          &.summary-events-only {
-            tbody {
-              tr.detail-event {
-                display: none;
-              }
-            }
-          }
-
-          td {
-            vertical-align:middle;
-
-            &.icon {
-              text-align: center;
-
-              .glyph {
-                color: rgba(0,0,0,.20);
-              }
-            }
-
-            b {
-              color: #666
-            }
-          }
-
-          .created_on {
-            font-size:13px;
-            line-height:13px;
-            border: 0px solid;
-            text-align:right;
-            min-width: 150px;
-            
-            .time {
-              margin-right: 0px;
-            }
-
-            .repeats {
-              font-size:90%;
-            }
-          }
-
-          .details {
-            border: 0px solid;
-            padding: 14px;
-
-            .summary {
-              font-size:11px;
-              font-weight:500;
-              line-height:10px;
-              color: @flat-grey;
-            }
-          }
-        }
-
-        .contact-urn {
-          display: inline-block;
-          margin-right: 10px;
-
-          .glyph {
-            margin-right: 3px;
-          }
-        }
-
-    {% endlessblock %}
+    .page-content {
+      align-self: auto;
+      max-width: 1024px;
+    }
 
 -block extra-script
   :javascript
