--- a/templates/msgs/broadcast_scheduled.haml
+++ b/templates/msgs/broadcast_scheduled.haml
@@ -40,24 +40,12 @@
                 -trans "No matching broadcasts"
 
 
--block extra-less
-  -compress css inline
-    {% lessblock %}
-      :plain
-        td.value-next {
-          color: @color-font-grey;
-          .glyph {
-            font-size:14px;
-            margin-top:2px;
-            margin-right:2px;
-          }
-          font-size: 14px;
-        }
-
-        td.clickable a:hover {
-          text-decoration: none;
-        }
-        .list-table {
-        margin-top:48px;
-        }
-    {% endlessblock %}
+-block extra-style
+  {{block.super}}
+  :css
+    td.clickable a:hover {
+      text-decoration: none;
+    }
+    .list-table {
+      margin-top:48px;
+    }
