--- a/templates/channels/channel_claim.haml
+++ b/templates/channels/channel_claim.haml
@@ -89,59 +89,37 @@
 -block form-buttons
 
 
--block extra-less
-  -compress css inline
-    {% lessblock %}
-      :plain
-
-        .channel-options {
-          h3 {
-            margin-top: 30px;
-          }
-        }
-
-        .checking-recommendations {
-          margin-bottom:10px;
-        }
-
-        .recommended {
-          .btn-primary {
-            background: @flat-mutedgreen;
-            border-color: @flat-mutedgreen - #111;
-          }
-
-          .claim-description {
-
-          }
-
-          .recommendation {
-            h3 {
-              margin-top: 0px;
-            }
-
-            display:inline-block;
-            padding:5px;
-            margin-top: 5px;
-            margin-bottom:10px;
-            display:inline-block;
-            .icon-star-2 {
-              color: @flat-darkwhite - #222;
-              font-size:22px;
-              float:left;
-              position:relative;
-              top: -3px;
-              margin-right:16px;
-
-
-            }
-          }
-
-        }
-    {% endlessblock %}
-
-
 -block extra-style
   {{block.super}}
+  :css
+    .channel-options h3 {
+      margin-top: 30px;
+    }
+    .checking-recommendations {
+      margin-bottom: 10px;
+    }
+    .recommended .btn-primary {
+      background: #5ca869;
+      border-color: #4b9758;
+    }
+    .recommended .recommendation {
+      padding: 5px;
+      margin-top: 5px;
+      margin-bottom: 10px;
+      display: inline-block;
+    }
+    .recommended .recommendation h3 {
+      margin-top: 0px;
+    }
+    .recommended .recommendation .icon-star-2 {
+      color: #9ba1a5;
+      font-size: 22px;
+      float: left;
+      position: relative;
+      top: -3px;
+      margin-right: 16px;
+    }
+
   :css
 
     .card:hover .bg-icon { 
