--- a/templates/channels/channellog_group_base.haml
+++ b/templates/channels/channellog_group_base.haml
@@ -35,6 +35,21 @@
 -block extra-style
   {{ block.super }}
   <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}rest_framework/css/prettify.css"/>
+
+  :css
+    table.http-log tbody tr:first-child td {
+      padding: 1.5rem;
+    }
+    pre.prettyprint {
+      margin: 0;
+      border: 0;
+      max-height: none !important;
+      padding: 1.5rem;
+    }
+    pre.prettyprint.request {
+      background: #ffffff;
+    }
+  
   :css
     .page-content {
       max-width: 100%;
@@ -45,29 +60,3 @@
     }
 
 
--block extra-less
-  {{block.super}}
-  -compress css inline
-    {% lessblock %}
-      :plain
-        table.http-log {
-          tbody {
-            tr:first-child {
-              td {
-                padding: 1.5rem;
-              }
-            }
-          }
-        }
-
-        pre.prettyprint {
-          margin: 0;
-          border: 0;
-          max-height: none !important;
-          padding: 1.5rem;
-
-          &.request {
-            background: #f7f7f9 + 111;
-          }
-        }
-    {% endlessblock %}
