--- a/templates/orgs/org_sub_orgs.haml
+++ b/templates/orgs/org_sub_orgs.haml
@@ -13,47 +13,31 @@
 -block subtitle
   {{user_org.name|capfirst}}
 
--block extra-less
+-block extra-style
   {{block.super}}
-  -compress css
-    {% lessblock %}
-      :plain
-
-        table.list {
-          border-top-left-radius: 0;
-          border-top-right-radius: 0;
-        }
-
-        tr {
-          th {
-            &.header-created_on {
-              text-align: right;
-              width: 160px;
-            }
-
-            &.header-manage {
-              font-size: 0; 
-            }
-          }
-
-          td {
-            &.field_created_on {
-              text-align: right;
-            }
-          }
-
-        }
-
-        .num-credits {
-          text-align:right;
-          font-size: 1.5rem;
-        }
-
-        .org-timezone {
-          font-size: 11px;
-          line-height:11px;
-        }
-    {% endlessblock %}
+  :css
+    table.list {
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
+    }
+    tr th.header-created_on {
+      text-align: right;
+      width: 160px;
+    }
+    tr th.header-manage {
+      font-size: 0;
+    }
+    tr td.field_created_on {
+      text-align: right;
+    }
+    .num-credits {
+      text-align: right;
+      font-size: 1.5rem;
+    }
+    .org-timezone {
+      font-size: 11px;
+      line-height: 11px;
+    }
 
 -block extra-style
   :css
@@ -80,7 +64,6 @@
       showModax("{{_('Delete Workspace')|escapejs}}",  "/org/delete/" + id + "/");
     }
 
-  
 -block table
   %table.list.lined
     %thead
