--- a/templates/public/video_list.haml
+++ b/templates/public/video_list.haml
@@ -11,82 +11,38 @@
   -blocktrans with brand=brand.name
     Start building SMS applications by watching these short two minutes videos on various {{ brand }} features.
 
--block extra-less
-  -compress css
-    {% lessblock %}
-      :plain
-
-        .manage {
-          position: absolute;
-          right:10px;
-          margin-top:-40px;
-        }
-
-
-        p.instructions {
-          margin-bottom:0px;
-          width:100%;
-          margin-top:15px;
-          font-size:19px;
-          line-height:24px;
-
-        }
-
-        .video {
-
-          h3 {
-            border-bottom: 1px solid #ddd;
-            margin-top:40px;
-          }
-
-          vertical-align:top;
-
-          iframe {
-            display: inline-block;
-            width:600;
-            vertical-align:top;
-            border: 1px solid #f3f3f3;
-            margin-top:15px;
-          }
-
-          .description {
-            display: inline-block;
-            width:340px;
-            vertical-align:top;
-            font-size:20px;
-            line-height:24px;
-            margin-left:25px;
-            color: #999;
-          }
-
-          .summary {
-            padding-top:15px;
-            white-space:pre-line;
-          }
-
-          .more {
-            font-size:14px;
-          }
-
-        }
-
-        .start-link {
-           font-size: 30px;
-           line-height: 40px;
-           padding: 10px;
-           display: block;
-           background-color: blue;
-           color: #fff;
-           text-decoration:none;
-        }
-
-        .start-cell {
-          margin: 20px 0px 30px 0px;
-          text-align: center;
-
-        }
-
-    {% endlessblock %}
+-block extra-style
+  {{block.super}}
+  :css
+    .workflow-btn {
+      padding: 4px 10px;
+    }
+    .workflow-section {
+      margin-top: 30px;
+      margin-bottom: 30px;
+    }
+    .medium-title {
+      color: #e6e6e6;
+      font-weight: 100;
+      font-size: 21px;
+    }
+    .workflow-glyph {
+      line-height: 1;
+      font-size: 120px;
+      height: 160px;
+      width: 160px;
+      padding: 20px;
+      text-decoration: none;
+      border-radius: 50%;
+      text-align: center;
+    }
+    .workflow-glyph.icon-1 {
+      line-height: 1.9em;
+    }
+    a.workflow-glyph {
+      text-decoration: none;
+    }
+  
 
 -block title
   -trans "Mastering Flows"
