--- a/templates/assets/asset_read.haml
+++ b/templates/assets/asset_read.haml
@@ -23,7 +23,7 @@
                 %a.button-primary{ href: "{{ download_url }}" }
                   -trans "Download Now"
               -else
-                .alert.alert-warning
+                %temba-alert(level="warning")
                   {{ file_error }}
 
 -block extra-script
