--- a/templates/channels/types/twilio_whatsapp/claim.haml
+++ b/templates/channels/types/twilio_whatsapp/claim.haml
@@ -29,7 +29,7 @@
     Once you connect a number you will immediately be able to send and receive WhatsApp messages.
 
   -if not account_numbers
-    .alert-warning.my-4
+    %temba-alert.my-4(level="warning")
       - blocktrans trimmed
         You do not have any number on your Twilio Account. Please make sure you have a number and that it has access to Twilio WhatsApp.
 
