--- a/templates/orgs/org_import.haml
+++ b/templates/orgs/org_import.haml
@@ -32,7 +32,7 @@
             .block.button-primary.ml-4(style="margin-top:-1px")
               -trans "Choose File"
 
-        .my-6.alert-warning
+        %temba-alert.my-6(level="warning")
           .font-normal.text-2xl
             -trans "Warning!"
           .mt-2
