--- a/templates/channels/types/instagram/claim.haml
+++ b/templates/channels/types/instagram/claim.haml
@@ -6,7 +6,7 @@
     You can connect your Instagram business account to {{name}} in just a few simple steps.
 
   -if claim_error
-    .alert-error.my-4
+    %temba-alert.my-4(level="error")
       {{ claim_error }}
 
 -block form
