--- a/templates/orgs/login/confirm_access.haml
+++ b/templates/orgs/login/confirm_access.haml
@@ -16,7 +16,7 @@
       %temba-textinput(name='password' placeholder='{{_("Password")|escape}}' password="true")
     
     -if form.password.errors
-      .alert-error.mt-4
+      %temba-alert.mt-4(level="error")
         {{form.password.errors}}
     .mt-6
       %input.button-primary(type="submit" value='{{_("Confirm")|escape}}')
