--- a/templates/orgs/org_whatsapp_cloud_connect.haml
+++ b/templates/orgs/org_whatsapp_cloud_connect.haml
@@ -7,7 +7,7 @@
     You can connect your Facebook Business account to {{name}} in just a few simple steps.
 
   -if claim_error
-    .alert-error.my-4
+    %temba-alert.my-4(level="error")
       {{ claim_error }}
 
 -block form
